# pjb_draw

./: .copilot-prompt.txt  CHANGELOG.md  README.md  changes_log.md  dummy_implementations.md  image_test_results.txt  main.py  old_changes_log.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  simple_factory_test.py  test1.draw  test2.draw.autosave  test2.draw.autosave.autosave  test2.draw.autosave.autosave.autosave  test3.draw.autosave.autosave  test_element_factory.py  test_element_position.py  test_image_element.py  test_method_name.py  test_property_panel_function.py  todo.md
.cursor/: riles
.cursor/rules/: rules-for-code-changes.mdc
docs/: coding_standards.md  specifications.md
drawing_app/: .gitignore  README.md  requirements.txt  setup.py
drawing_app/src/: main.py
drawing_app/tests/: test_app.py
src/: __init__.py  app.py
src/drawing/: __init__.py
src/models/: __init__.py
src/ui/: __init__.py  canvas.py  main_window.py  property_panel.py
src/utils/: __init__.py  element_factory.py  element_hit_detection.py  export_manager.py  history_manager.py  image_handler.py  project_manager.py  selection_manager.py  theme_manager.py  tool_manager.py
tests/: README.md  __init__.py  conftest.py  run_position_tests.py  run_tests.py  test_action_handlers.py  test_app.py  test_canvas.py  test_canvas_drawing.py  test_element_properties.py  test_geometry_properties.py  test_history_system.py  test_image_handler.py  test_menu_system.py  test_project_file_format.py  test_property_panel.py  test_responsive_layout.py
tests/drawing/: __init__.py  (+12 more)
(+36 files in other folders)
