[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawing-package"
version = "0.1.0"
description = "A Python-based drawing tool for marking up plans and images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Drawing Package Team"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
